--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Project)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Project main.cpp Point.cpp Point.h KNN.cpp KNN.h)
+add_executable(Project main.cpp Point.cpp Point.h KNN.cpp KNN.h KNNParallel.cpp KNNParallel.h)
